<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="social_feed_section_title">推荐关注</string>
    <string name="social_story_me">我的</string>
    <string name="social_story_live">直播</string>
    <string name="social_story_topic">话题</string>
    <string name="social_story_nearby">附近</string>
    <string name="social_search_hint">搜索标题 / 主播行</string>
    <string name="social_row_follow">关注</string>
    <string name="social_row_unfollow">已关注</string>
    <string name="social_detail_title">动态详情</string>
    <string name="social_detail_hero_desc">封面</string>
</resources>
